2009-10-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c (ErrnoReturn): Replace the hardwired
	  constant 11 with the proper errno define, EAGAIN. What was I
	  thinking ? The BSD's have a different errno assignment and break
	  with the hardwired number. Reported by emiliano on the chat.

2009-10-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclTomMathInt.h (new): Public header tclTomMath.h had
	* generic/tclTomMath.h: dependence on private headers, breaking use
	* generic/tommath.h:    by extensions [Bug 1941434].

2009-10-05  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.8 release.

2009-10-04  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXBundle.c:	Workaround CF memory managment bug in
	* unix/tclUnixInit.c:		Mac OS X 10.4 & earlier. [Bug 2569449]

2009-10-02  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Africa/Cairo:
	* library/tzdata/Asia/Gaza:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Pacific/Apia:	Olson's tzdata2009n.
	
2009-09-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclAlloc.c:           Cleaned up various routines in the
	* generic/tclCkalloc.c:         call stacks for memory allocation to
	* generic/tclInt.h:		guarantee that any size values computed
	* generic/tclThreadAlloc.c:     are within the domains of the routines
	they get passed to.  [Bugs 2557696 and 2557796].

2009-09-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Bump to http 2.7.4 to account for
	* library/http/pkgIndex.tcl:	[Bug 2849860] fix.
	* unix/Makefile.in:
	* win/Makefile.in:

2009-09-10  Donal K. Fellows  <dkf@users.sf.net>

	* library/http/http.tcl (http::Event): [Bug 2849860]: Handle charset
	names in double quotes; some servers like generating them like that.

2009-09-01  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:	Bump to tcltest 2.3.2 after revision
	* library/tcltest/pkgIndex.tcl:	to verbose error message.